# gw2search

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml  publish.sh  release.toml
format_render/: CHANGELOG.md  Cargo.toml
format_render/src/: lib.rs
src/: api.rs  config.rs  crafting.rs  gw2efficiency.rs  main.rs  request.rs
wix/: main.wxs
