[package]
name = "gw2search"
version = "0.4.1"
description = "Searches for ids in the gw2 api. Searches items, skills and traits."
edition = "2021"
authors = ["Andy Berdan <andy@berdan.ca>"]

[dependencies]
bincode = "1.3.3"
colored = "2.0.0"
csv = "1.1.6"
dirs = "4.0.0"
flate2 = "1.0.24"
futures = "0.3.21"
num-rational = "0.4.0"
num-traits = { version = "0.2.15", default-features = false }
once_cell = "1.12.0"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.7"
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
phf = { version = "0.10.1", features = ["macros"] }
lazy_static = "1.4.0"
strum = { version = "0.24.1", features = ["derive"] }
iced = "0.4.2"
