[package]
name = "gw2search"
version = "0.8.1"
description = "Searches in the gw2 api. Supports items, skills and traits."
edition = "2021"
authors = ["Andy Berdan <andy@berdan.ca>"]
repository = "https://github.com/berdandy/gw2search"
publish = false

[package.metadata.wix]
upgrade-guid = "BB788C03-44C7-4632-9D06-50CD34D6556A"
path-guid = "8D37F87E-015A-46C1-AFC5-AC71E2F7BDB8"
license = false
eula = false

[dependencies]
bincode = "1.3.3"
colored = "2.0.0"
csv = "1.1.6"
dirs = "4.0.0"
flate2 = "1.0.24"
futures = "0.3.21"
num-rational = "0.4.0"
num-traits = { version = "0.2.15", default-features = false }
once_cell = "1.12.0"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.7"
structopt = "0.3.26"
tokio = { version = "1.20.4", features = ["full"] }
toml = "0.5.9"
phf = { version = "0.10.1", features = ["macros"] }
lazy_static = "1.4.0"
strum = { version = "0.24.1", features = ["derive"] }
iced = "0.4.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
