[package]
name = "gw2search"
version = "0.11.0"
description = "Searches in the gw2 api. Supports items, skills, traits, specializations, professions, pets, legends."
edition = "2021"
authors = ["Andy Berdan <andy@berdan.ca>"]
repository = "https://github.com/berdandy/gw2search"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "BB788C03-44C7-4632-9D06-50CD34D6556A"
path-guid = "8D37F87E-015A-46C1-AFC5-AC71E2F7BDB8"
license = false
eula = false

[dependencies]
bincode = "1.3.3"
colored = "2.0.0"
csv = "1.1.6"
dirs = "4.0.0"
flate2 = "1.0.24"
futures = "0.3.21"
num-rational = "0.4.0"
num-traits = { version = "0.2.15", default-features = false }
once_cell = "1.12.0"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_path_to_error = "0.1.7"
structopt = "0.3.26"
tokio = { version = "1.20.4", features = ["full"] }
toml = "0.5.9"
phf = { version = "0.10.1", features = ["macros"] }
lazy_static = "1.4.0"
strum = { version = "0.24.1", features = ["derive"] }
iced = "0.13.1"
format_render = { version = "0.1.0", path = "format_render" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["format_render"]
